--- a/index.html
+++ b/index.html
@@ -16,34 +16,21 @@
 <div class="header" id="myHeader">
   <ul>
   <li><a href="#index">Acasa</a></li>
-  <li><a href="News">Noutati</a></li>
   <li><a href="Login">Logare</a></li>
-  <li><a href="Contact">Contact</a></li>
+	<div class="categorii">
+		<button class="dropbtn">Categorii </button>
+		<div class="categorii-content">
+			<a href="#">Scriitori</a>
+			<a href="#">Pictori</a>
+			<a href="#">Actori</a>
+		</div>
+  </div> 
   
 </ul>
-   <input type="text" placeholder="Search..">
 </div>
 
 <div class="row">
 
-
-
-
-<div class="col-3 col-s-3 menu">
-  <ul>
-     <li>Scriitori</li>
-     <li>Pictori</li>
-     <li>Actori</li>
-     <li>Muzicieni</li>
-     <li>Oameni de afaceri</li>
-     <li>Personalitati istorice</li>
-     <li>Oameni de stiinta</li>
-     <li>Sportivi</li>
-     <li>Politicieni</li>
-     <li>Sange nobil</li>
-     <li>Desene animate</li>
-   </ul>
-</div>
 
 <div class="col-6 col-s-9">
 <p>Continut</p>
