--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="top-container">
-  <img src="picture2.jpg" alt="Doctor Who" style="width:100%;height: 300px;">
+  <img src="picture3.png" alt="Doctor Who" style="width:100%;height: 170px;">
   <div class="content">
   <h1>GraC</h1>
   <p>Autograph collector.</p>
@@ -15,25 +15,57 @@
 </div>
 <div class="header" id="myHeader">
   <ul>
-  <li><a href="#index">Acasa</a></li>
-  <li><a href="Login">Logare</a></li>
+  <li><a href="index.html">Acasa</a></li>
+  <li><a href="Login.html">Logare</a></li>
 	<div class="categorii">
 		<button class="dropbtn">Categorii </button>
 		<div class="categorii-content">
-			<a href="#">Scriitori</a>
-			<a href="#">Pictori</a>
-			<a href="#">Actori</a>
+			<a href="scriitori">Scriitori</a>
+			<a href="pictori">Pictori</a>
+			<a href="actori">Actori</a>
+                        <a href="sportivi">Sportivi</a>
+                        <a href="politicieni">Personalitati politice</a>
+                        <a href="muzicieni">Muzicieni</a>
+                        <input type="text" placeholder="Search.."> 
 		</div>
-  </div> 
+      
+  
   
 </ul>
 </div>
 
 <div class="row">
 
+<div class="col-3 col-s-3">
+<img src="picture4.jpg" style="width:100%;height: 300px;">
+<img src="picture6.jpg" style="width:100%;height: 300px;">
+
+</div>
+
+
 
 <div class="col-6 col-s-9">
 <p>Continut</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
 </div>
   
 
@@ -42,7 +74,14 @@
   <div class="aside">
     <h2>Stiri</h2>
      <a href="https://www.telegraph.co.uk/news/picturegalleries/howaboutthat/11215779/The-top-10-most-valuable-celebrity-autographs-in-pictures.html">Top 10-autografe</a>
-  </div>
+    <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+  <p>Some text some text some text some text..</p>
+ 
+</div>
 </div>
 
 </div>
