--- a/Profile change.html
+++ b/Profile change.html
@@ -16,7 +16,6 @@
 <div class="header" id="myHeader">
   <ul>
   <li><a href="index.html">Acasa</a></li>
-  <li><a href="Login.html">Logare</a></li>
 	<div class="categorii">
 		<button class="dropbtn">Categorii </button>
 		<div class="categorii-content">
@@ -45,10 +44,10 @@
     <input type="text" placeholder="File Path" name="Path" >
   
     <label for="title"><b>Screen name </b></label>
-    <input type="text" placeholder=" " name="title" required>
+    <input type="text" placeholder=" " name="title">
 	
 	<label for="det1"><b>Detalii aditionale</b></label>
-    <textarea rows="4" cols="37"></textarea>
+	<input type="text" name="det1">
 
         
 		
