--- a/Upload.html
+++ b/Upload.html
@@ -16,7 +16,6 @@
 <div class="header" id="myHeader">
   <ul>
   <li><a href="index.html">Acasa</a></li>
-  <li><a href="Login.html">Logare</a></li>
 	<div class="categorii">
 		<button class="dropbtn">Categorii </button>
 		<div class="categorii-content">
@@ -26,7 +25,7 @@
             <a href="sportivi">Sportivi</a>
             <a href="politicieni">Personalitati politice</a>
             <a href="muzicieni">Muzicieni</a>
-            <input type="text" placeholder="Search.."> 
+                       <input type="text" placeholder="Search.."> 
 		</div>
       
   </div> 
@@ -57,7 +56,7 @@
     <input type="text" placeholder=" " name="date3" required>
 	
 	<label for="det1"><b>Detalii aditionale</b></label>
-    <textarea rows="4" cols="37"></textarea>
+    <input type="text" name="dat1">
 
     <label for="tag"><b>Taguri</b>(vor fi separate prin spatiu)</label>
     <input type="text" placeholder=" " name="tag" required>
