--- a/Grac1/index.html
+++ b/Grac1/index.html
@@ -20,13 +20,13 @@
 	<div class="categorii">
 		<button class="dropbtn">Categorii </button>
 		<div class="categorii-content">
-			<a href="scriitori">Scriitori</a>
+			<a href="Scriitori.html">Scriitori</a>
 			<a href="pictori">Pictori</a>
 			<a href="actori">Actori</a>
-                        <a href="sportivi">Sportivi</a>
-                        <a href="politicieni">Personalitati politice</a>
-                        <a href="muzicieni">Muzicieni</a>
-                        <input type="text" placeholder="Search.."> 
+            <a href="sportivi">Sportivi</a>
+            <a href="politicieni">Personalitati politice</a>
+            <a href="muzicieni">Muzicieni</a>
+            <input type="text" placeholder="Search.."> 
 		</div>
       
   
@@ -45,27 +45,12 @@
 
 
 <div class="col-6 col-s-9">
-<p>Continut</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
+<p><b><font size="4">Inscriete pentru a gestiona prorpiile autografe!</font></b></p><br><br>
+	<img class="img-circle" src="picture10.png" style="width:100%;height: 500px;">
+	<img class="img-circle" src="picture11.png" style="width:100%;height: 500px;">
+<p><b><font size="4">Uploadeaza-ti autografele si aratale lumii!</font></b></p><br><br>
+	<img class="img-circle" src="picture12.png" style="width:100%;height: 500px;">
+
 </div>
   
 
@@ -73,13 +58,10 @@
 <div class="col-3 col-s-12">
   <div class="aside">
     <h2>Stiri</h2>
-     <a href="https://www.telegraph.co.uk/news/picturegalleries/howaboutthat/11215779/The-top-10-most-valuable-celebrity-autographs-in-pictures.html">Top 10-autografe</a>
-    <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
-  <p>Some text some text some text some text..</p>
+    <a href="https://www.telegraph.co.uk/news/picturegalleries/howaboutthat/11215779/The-top-10-most-valuable-celebrity-autographs-in-pictures.html">Top 10-autografe</a><br><br>
+    <a href="https://autographcollector.com/sports/baseball/heritage-gehrig-photo-1933-goudy-card-brings-60k/">Gehrig Photo In 1933 Goudy Baseball Cards Brings $60K At Heritage</a><br><br>
+	<a href="http://www.bbc.com/news/entertainment-arts-42916191">Bryan Cranston joins the ranks of the no-autograph celebrities</a><br><br>
+	<a href="http://www.starwarsautographcollection.com/content/star-wars-autograph-news-toy-talk">STAR WARS AUTOGRAPH NEWS ON "TOY TALK"</a>
  
 </div>
 </div>
