--- a/Grac1/paginacont.html
+++ b/Grac1/paginacont.html
@@ -36,82 +36,91 @@
 
 <div class="col-3 col-s-3 menu">
   <ul>
-     <li>Modifica profil</li>
-    <li>Adaugare autograf nou</li>
+     <li><a href="Profile change.html">Modifica profil</a></li>
+    <li><a href="Upload.html">Adaugare autograf nou</a></li>
     <li>Autografe dorite</li>
   </ul>
  
    <a href="index.html">  <button type="button" class="cancelbtn">Logout</button></a>
 </div>
 
-<div class="col-9 col-s-5">
-
+<div class="col-9 col-s-9">
+ <h1>Top autografe</h1>
 <div class="row2">
   <div class="column">
  <div class="content2">
-   <h1>Top autografe</h1>
-  <p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
+   <h1>Actori</h1>
 
-<p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-
-<p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
 
  <img src="picture6.jpg" alt="p6" style="width:100%">
-<p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-
- <img src="picture6.jpg" alt="p6" style="width:100%">
+<h3>Detalii:</h3>
+<p>Nume:Harisson Ford</p>
+<p>Perioada:1978</p>
+<p>Valoare:10</p>
 </div>
 </div>
 <div class="column">
  <div class="content2">
-  <h1>Top autografe</h1>
-  <p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
+  <h1>Sportivi</h1>
 
-<p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
 
-<p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-
- <img src="picture6.jpg" alt="p6" style="width:100%">
-<p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-
- <img src="picture6.jpg" alt="p6" style="width:100%">
-</div>
-</div>
-
-<div class="column">
- <div class="content2">
-  <h1>Top autografe</h1>
-  <p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-
-<p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-
-<p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-
- <img src="picture6.jpg" alt="p6" style="width:100%">
-<p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-
- <img src="picture6.jpg" alt="p6" style="width:100%">
+ <img src="picture5.jpg" alt="p6" style="width:100%">
+<h3>Detalii:</h3>
+<p>Nume:Babe Ruth</p>
+<p>Perioada:1988</p>
+<p>Valoare:9</p>
+ <img src="picture13.jpg" alt="p6" style="width:100%">
+<h3>Detalii:</h3>
+<p>Nume:CR7(Cristiano Ronaldo)</p>
+<p>Perioada:2018</p>
+<p>Valoare:11</p>
+<p>Note:Ronaldo>Mesi.CR7 NR1 #FOREVER!!</p>
 </div>
 </div>
 
 <div class="column">
  <div class="content2">
-  <h1>Top autografe</h1>
-  <p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
+  <h1>Muzicieni</h1>
+  <p
+ <img src="picture15.jpg" alt="p6" style="width:100%">
+<h3>Detalii:</h3>
+<p>Nume:Freddie Mercury</p>
+<p>Perioada:1990</p>
+<p>Valoare:14</p>
+ <img src="picture14.jpg" alt="p6" style="width:100%">
+<p>Nume:Fuego</p>
+<h3>Detalii:</h3>
+<p>Perioada:2015</p>
+<p>Valoare:6</p>
+</div>
+</div>
 
-<p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
+<div class="column">
+ <div class="content2">
+  <h1>Scriitori</h1>
+  
+ <img src="picture8.jpg" alt="p6" style="width:100%">
+<h3>Detalii:</h3>
+<p>Nume:James Dean</p>
+<p>Perioada:1998</p>
+<p>Valoare:9</p>
+ <img src="picture9.jpg" alt="p6" style="width:100%">
+<h3>Detalii:</h3>
+<p>Lev Tolstoi</p>
+<p>Perioada:1898</p>
+<p>Valoare:7</p>
 
-<p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-
- <img src="picture6.jpg" alt="p6" style="width:100%">
-<p>Chania is the capitalregion on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-
- <img src="picture6.jpg" alt="p6" style="width:100%">
 </div>
 </div>
 </div>
+<div class="col-9 col-s-9">
+<h>Selectare autografe</h>
+ <button type="button"><a href="Scriitori.html">Selectare categorie autograf</a></button>
+ <button type="button"><a href="Scriitori.html">Autografe ordonate alfabetic</a></button>
+ <button type="button"><a href="Scriitori.html">Autografe ordonate dupa data achizitionarii</a></button>
+ <button type="button"><a href="Scriitori.html">Autografe ordonate dupa valoare</a></button>
 </div>
-
+</div>
 
 
 
