--- a/Grac1/Upload.html
+++ b/Grac1/Upload.html
@@ -37,7 +37,7 @@
 <div class="col-4 col-s-3">
 <h2>Formular Upload</h2>
 
-<form>
+<form method="post" action="uploadAutograf.php">
 
   <div class="container">
 	<label for="Path"><b>Imagine</b></label>
