--- a/Upload.html
+++ b/Upload.html
@@ -37,7 +37,7 @@
 <div class="col-4 col-s-3">
 <h2>Formular Upload</h2>
 
-<form>
+<form method="post" action="uploadAutograf.php">
 
   <div class="container">
 	<label for="Path"><b>Imagine</b></label>
@@ -55,8 +55,8 @@
 	<label for="date3"><b>Domeniu</b></label>
     <input type="text" placeholder=" " name="date3" required>
 	
-	<label for="det1"><b>Detalii aditionale</b></label>
-    <input type="text" name="dat1">
+	<label for="detl"><b>Detalii aditionale</b></label>
+    <input type="text"  placeholder=" " name="detl" required>
 
     <label for="tag"><b>Taguri</b>(vor fi separate prin spatiu)</label>
     <input type="text" placeholder=" " name="tag" required>
