--- a/Grac/Creare_cont.html
+++ b/Grac/Creare_cont.html
@@ -42,22 +42,22 @@
 <div class="container">
    <label for="nume"><b>Nume</b></label>
  
-  <input type="text" id="nume" name="nume" placeholder="Numele tau..">
+  <input type="text" id="nume" name="nume" placeholder="Numele tau.." required>
  
   <label for="prenume"><b>Prenume</b></label>
-  <input type="text" id="prenume" name="prenume" placeholder="Prenumele tau..">
+  <input type="text" id="prenume" name="prenume" placeholder="Prenumele tau.." required>
   
   <label for="numeutilizator"><b>Numele dupa care vrei sa fii cunoscut</b></label>
-  <input type="text" id="numeutilizator" name="numeutilizator" placeholder="Avatar..">
+  <input type="text" id="numeutilizator" name="numeutilizator" placeholder="Avatar.." required>
   
 
 <label for="varsta"><b>Varsta</b></label>
   
-  <input type="text" id="varsta" name="varsta" placeholder="Varsta..">
+  <input type="text" id="varsta" name="varsta" placeholder="Varsta.." required>
   <label for="adresa"><b>Adresa</b></label>
-  <input type="text" id="adresa" name="adresa" placeholder="Adresa..">
+  <input type="text" id="adresa" name="adresa" placeholder="Adresa.." required>
   <label for="adresaemail"><b>Adresa E-mail</b></label>
-  <input type="text" id="adresaemail" name="adresaemail" placeholder="Adresa E-mail.."> 
+  <input type="text" id="adresaemail" name="adresaemail" placeholder="Adresa E-mail.." required> 
  <label for="psw"><b>Introdu o parola</b></label>
  <input type="password" placeholder="Enter Password" name="psw" required>
  <label for="psw"><b>Reintrodu parola aleasa</b></label>
