--- a/Grac/Login.html
+++ b/Grac/Login.html
@@ -38,7 +38,7 @@
 <div class="col-4 col-s-5">
 <h2>Logare client</h2>
 
-<form>
+<form method="post" action="login.php"form>
   <div class="imgcontainer">
     <img src="picture6.jpg" alt="Avatar" class="avatar">
   </div>
