--- a/Grac/Upload.html
+++ b/Grac/Upload.html
@@ -55,16 +55,16 @@
 	<label for="date3"><b>Domeniu</b></label>
     <input type="text" placeholder=" " name="date3" required>
 	
-	<label for="det1"><b>Detalii aditionale</b></label>
-    <input type="text" name="dat1">
+	<label for="detl"><b>Detalii aditionale</b></label>
+    <input type="text"  placeholder=" " name="detl" required>
 
     <label for="tag"><b>Taguri</b>(vor fi separate prin spatiu)</label>
     <input type="text" placeholder=" " name="tag" required>
         
 		
 		
-	<input type="radio" name="type" value="private"> Privat
-	<input type="radio" name="type" value="public"> Public
+	<input type="radio" name="type" value="private" required> Privat
+	<input type="radio" name="type" value="public" required> Public
 	
     <button type="submit">Upload</button>
 
