--- a/Other/Manual.html
+++ b/Other/Manual.html
@@ -17,7 +17,46 @@
 				</dd>
 			</dl>
 		</section>
-		<section typeof="sa:description" id="description" role="doc-introduction">
+		<section>
+			<h2>Cuprins</h2>
+				<ul>
+					<li><a href="#introduction">O scurta descriere</a></li>
+					<li>
+						<a href="#account">Gestionarea contului</a>
+						<ul>
+							<li><a href="#create">Crearea Contului</a></li>
+							<li><a href="#login">Logarea</a></li>
+							<li><a href="#logout">Delogarea</a></li>
+						</ul>
+					</li>
+					<li><a href="#grac">Adaugarea autografelor</a></li>
+					<li>
+						<a href="#view">Vizualizarea autografeor</a>
+						<ul>
+							<li><a href="#view1">Vizualizarea propriilor autografelor</a></li>
+							<li><a href="#view2">Folosind casuta search</a></li>
+							<li><a href="#view3">Folosind metoda categorii</a></li>
+						</ul>
+					</li>
+					<li><a href="#voting">Valoarea autografelor</a></li>
+					<li>
+						<a href="#exchange">Schimbul autografelor</a>
+						<ul>
+							<li><a href="#exchange1">Crearea unui schimb</a></li>
+							<li><a href="#exchange2">Vizualizarea cererilor</a></li>
+							<li><a href="#exchange3">Acceptarea/Respingerea</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#exportarea">Exportarea raportului colectii proprii</a>
+						<ul>
+							<li><a href="#exportarea1">In format df</a></li>
+							<li><a href="#exportarea2">RSS</a></li>
+						</ul>
+					</li>
+				</ul>
+		</section>
+		<section typeof="sa:description" id="introduction" role="doc-introduction">
 			<h2>O scurta descriere</h2>
 			<p align="left">
 				Applicatia noastra a fost creata pentru colctionarii inraiti de autografe 
@@ -86,12 +125,14 @@
 					Aplicatia va face restul.
 				</p>
 			</section>
+			<section id="view3">
 				<h4>Folosind sectiunea "Categorii"</h4>
 				<p>
 					Daca nu stiti prea multe sau doriti pur si simplu sa vizualizati alte autografe folositi sectiunea 
 					"categorii".Dupa ce faceti "hover" peste acel buton mai multe domenii vor aparea intr-un meniu "drop-down".
 					Selectati Categoria de care sunteti interesati printr-un click.
 				</p>
+			</section>
 		</section>
 		<section id="voting">
 			<h2>Valoarea Autografelor</h2>
@@ -104,7 +145,7 @@
 			</p>
 		</section>
 		<section id="exchange">
-			<section id="exchangetitle">
+			<section id="exchange1">
 				<h2>Schimbul de autografe</h2>
 				<p>
 					Schimbul de autografe se poate face intre doi utilizatori.Ambele parti trebuie sa accepte un schimb pentru
