--- a/Other/Report.html
+++ b/Other/Report.html
@@ -19,6 +19,44 @@
 				</dd>
 			</dl>
 		</section>
+		<section>
+			<h2>Cuprins</h2>
+				<ul>
+					<li><a href="#idea">Idei de pornire</a></li>
+					<li><a href="#interface">Interfata Grafica</a></li>
+					<li>
+						<a href="#backend">Back-End</a>
+						<ul>
+							<li><a href="#backend1">Functii folosite universale</a></li>
+							<li>	
+								<a href="#backend2">Formulare</a>
+								<ul>
+									<li><a href="#backend2.1">Crearea contului/logare<a></li>	
+									<li><a href="#backend2.2">Adaugarea unui autograf<a></li>
+									<li><a href="#backend2.3">Bara search<a></li>
+								</ul>
+							</li>
+							<li>
+								<a href="#backend3">Gestionarea autografelor</a>
+									<ul>
+										<li><a href="#backend3.1">Tranzactii</a></li>
+										<li><a href="#backend3.2">Votarea</a></li>
+									</ul>
+							</li>
+						</ul>
+							</li>
+							<li><a href="#backend-ajax">Ajax-suite</a></li>
+						</ul>
+								<li>
+						<a href="#problems">Probleme intapinate</a>
+						<ul>
+							<li><a href="#problems1">Redirectionarile</a></li>
+							<li><a href="#problems2">Too much data</a></li>
+						</ul>
+					</li>
+					<li><a href="#sources">Sources</a></li>
+				</ul>
+		</section>
 		<section id="idea">
 			<p>
 			<h1>Ideile de la care am pornit:</h1>
@@ -114,9 +152,9 @@
 				</p>
 			</section>
 		</section>
-		<section>
+		<section id="problems">
 			<h2>Probeleme intapinate</h2>
-			<section>
+			<section id="problems1">
 				<h4>Redicrectionarile</h4>
 				<p>
 					Redirectionarea dinamica a fost o problema datorita faptului ca nu puteam stii in ce pagina suntem.
@@ -124,7 +162,7 @@
 					prestabilita
 				</p>
 			</section>
-			<section>
+			<section id="problems2">
 				<h4>Too much data</h4>
 				<p>
 					Sistemul de votare nu este foarte practic cand apar foarte multe date in sistem.
@@ -132,7 +170,7 @@
 				</p>
 			</section>
 		</section>
-		<section>
+		<section id="sources>
 			<h2>Sources</h2>
 			<ul>
 				<li>https://profs.info.uaic.ro/~busaco/teach/courses/web</li>
