--- a/Other/Report.html
+++ b/Other/Report.html
@@ -170,7 +170,7 @@
 				</p>
 			</section>
 		</section>
-		<section id="sources>
+		<section id="sources">
 			<h2>Sources</h2>
 			<ul>
 				<li>https://profs.info.uaic.ro/~busaco/teach/courses/web</li>
